# src/app-build.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const run = require('./routes/run');
+const task = require('./routes/task');
 
 let app;
 
@@ -10,6 +11,7 @@ function buildApp() {
   app.delete('/run/:run_id', run.deleteRun);
   app.post('/run/:run_id/stop', run.stopRun);
   app.get('/run/:run_id', run.runStatus);
+  app.delete('/task/:task_id', task.deleteTask);
   return app;
 }
 
