# src/routes/task.js
@@ -1,0 +1,8 @@
+
+function deleteTask(request, response) {
+    
+}
+
+module.exports = {
+    deleteTask,
+  };
